Make first-party code run at minSdk 29: fix uncovered post-29 JDK APIs
An empirical audit (bytecode scan of every module on :android-app's runtime
classpath against the SDK's api-versions.xml, minus what D8 backports and the
desugar_jdk_libs config actually cover at min-api 29) found five JDK APIs in
first-party code that crash on Android 10-13 devices, and two in-tree comments
that wrongly claimed desugaring covers them (it never has):

- CompletableFuture.failedFuture (API 31), orTimeout (API 31) and
  exceptionallyCompose (API 34): ~90 call sites across networking, consensus,
  myotis-evm, node-core, rpc-backend and the Android NodeService. Replaced by
  com.jaeckel.ethp2p.core.concurrent.Futures, which reproduces the JDK
  contracts exactly (same-future orTimeout semantics included). The NewApi
  lint suppressions in NodeService rested on the false backport claim - lint
  was right - so they are removed.
- java.util.HexFormat (API 34): 24 call sites. Replaced by io.myotis.evm.Hex
  (exact formatHex/parseHex semantics) and private helpers in :myotis-engines,
  which does not depend on :myotis-evm.
- Path.of (API 34) -> Paths.get (API 26) in consensus, node-core, tx-history.
- BigInteger.intValueExact/longValueExact (API 31) -> bit-length-guarded
  private equivalents (same ArithmeticException contract) in EthTxDecoder,
  EvmFactory, EnsResolver; AbiDecoder's guard already proves intValue() safe.

desugar_jdk_libs 2.1.3 -> 2.1.5: the first release that desugars
Stream.toList() (API 34) at minSdk 29, covering our ~10 call sites AND
Java-21-built third-party jars; verified in the final dex, which no longer
contains any Stream.toList reference.

Remaining >29 references in the APK are third-party only (Besu fork EVM
internals, ConsenSys discovery's KBucket/CompletableFuture use, libp2p
circuit/quic/autonat handlers we never wire, tuweni-units UInt32Value,
besu-util Era1/RollingFileWriter dead code); netty and guava hits sit behind
their own runtime capability probes.